package com.studentexchange.enums;

public enum Category {
    BOOK,NOTES,PAST_PAPERS,RESOURCE
}
