package com.studentexchange.enums;

public enum Condition {
    NEW, GOOD, FAIR, POOR
}
