package com.studentexchange.enums;

public enum GradeLevel {
    GRADE_9, GRADE_10, GRADE_11, GRADE_12, UNIVERSITY, ENTRY_TEST
}
