package com.studentexchange.enums;

public enum PaymentMethod {
    ONLINE, CASH_ON_DELIVERY
}
