package com.studentexchange.enums;

public enum PaymentStatus {
    PENDING, COMPLETED, FAILED, REFUNDED
}
