package com.studentexchange.enums;

public enum ShippingStatus {
    NOT_SHIPPED, SHIPPED, DELIVERED
}
